<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        android:icon="@drawable/action_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search_button"
        android:orderInCategory="100"
        android:title="@string/ic_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_setting"
        android:orderInCategory="200"
        android:title="@string/action_setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_signout"
        android:orderInCategory="200"
        android:title="@string/action_signout"
        app:showAsAction="never" />


</menu>